[gd_scene load_steps=8 format=3 uid="uid://cbs817mhihlhw"]

[ext_resource type="Script" path="res://Entities/Enemy/static_enemy.gd" id="1_m5cug"]
[ext_resource type="Texture2D" uid="uid://ds2fn6du2w80b" path="res://Sprites/Enemy/static_enemy_sprite.png" id="2_abwo4"]
[ext_resource type="Texture2D" uid="uid://db5in2p1yixis" path="res://Sprites/Enemy/damage_frame_1.png" id="3_rsexc"]
[ext_resource type="Texture2D" uid="uid://criwc4s3g653j" path="res://Sprites/Enemy/damage_frame_2.png" id="4_wt0po"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mn3x5"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_4acq4"]
resource_name = "take_damage"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("damage_sprite_1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_sprite_2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yn5to"]
_data = {
"take_damage": SubResource("Animation_4acq4")
}

[node name="static_enemy" type="CharacterBody2D"]
script = ExtResource("1_m5cug")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_abwo4")

[node name="dummy_collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mn3x5")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-24, -40, 24, -40, 24, -24, 40, -24, 40, 24, 24, 24, 24, 40, -24, 40, -24, 24, -40, 24, -40, -24, -24, -24)

[node name="damage_sprite_1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_rsexc")

[node name="damage_sprite_2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_wt0po")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.53674e-07, 9.53674e-07)
scale = Vector2(3.2, 3.2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yn5to")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
